--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
     font-size: 28px;
+    max-width: 1920px;
+    background-color: #333;
+    margin-right: auto;
+    margin-left: auto;
 }
 section {
     min-height: 100vh;
