--- a/style.css
+++ b/style.css
@@ -344,3 +344,51 @@ p.counter {
       font-size: 2em;
     }
   }
+
+  .overlay-container {
+    position: relative; width:100%;
+  }
+  .img-overlay {
+    position: absolute; 
+    background-color: #c8102e; 
+    width:100%; 
+    height:100%; 
+    bottom: 0; 
+    border-radius: 50%;
+    opacity: .2;
+  }
+  .overlay-icon {
+    position: absolute; 
+    bottom: 0;
+    width:100%;
+    height:100%;
+    padding:1em;
+    font-size: 5em;
+    width: 100%;
+    color: #fff;
+    display:none;
+  }
+
+  .overlay-container:hover .overlay-icon {
+  display: block;
+
+  }
+  .overlay-container:hover .img-overlay {
+    position: absolute; 
+    background-color: #c8102e; 
+    width:100%; 
+    height:100%; 
+    bottom: 0; 
+    border-radius: 50%;
+    opacity: .6;
+  }
+
+  .img-hover {
+   
+    animation: crescendo 1s alternate infinite ease-in;
+  }
+  
+  @keyframes crescendo {
+    0%   {transform: scale(.9);}
+    100% {transform: scale(1);}
+  }
