--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ section {
           button.arrow-button {
             z-index: 1;
             position: fixed;
-            top: 75%;
+            top: 90%;
             transform: translateY(-5%);
             font-size: 1.5em;
             padding: 15px;
@@ -347,6 +347,7 @@ p.counter {
     #down-arrow {
       right: 25;
     }
+  }
   @media screen and (max-width: 1214px) {
     h1.league {
       font-size: 2.2em;
